// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`is checked 1`] = `
<span
  className="MuiCheckbox-root MuiCheckbox-colorPrimary MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary PrivateSwitchBase-root Mui-checked  css-12wnr2w-MuiButtonBase-root-MuiCheckbox-root"
  onBlur={[Function]}
  onContextMenu={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={null}
>
  <input
    checked={true}
    className="PrivateSwitchBase-input css-1m9pwf3"
    data-indeterminate={false}
    disabled={false}
    onChange={[Function]}
    type="checkbox"
  />
  <svg
    aria-hidden={true}
    className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
    color="transparent"
    focusable="false"
    viewBox="0 0 16 16"
  >
    <rect
      fillOpacity={0}
      height="14"
      rx="1"
      stroke="#8F8F8F80"
      width="14"
      x="1"
      y="1"
    />
    <rect
      fill="#00C3FF"
      height="10"
      rx="1"
      strokeOpacity={0}
      width="10"
      x="3"
      y="3"
    />
  </svg>
  <span
    className="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
  />
</span>
`;

exports[`is disabled 1`] = `
<span
  aria-disabled={true}
  className="MuiCheckbox-root MuiCheckbox-colorPrimary MuiButtonBase-root Mui-disabled MuiCheckbox-root MuiCheckbox-colorPrimary PrivateSwitchBase-root Mui-disabled  css-12wnr2w-MuiButtonBase-root-MuiCheckbox-root"
  onBlur={[Function]}
  onContextMenu={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={-1}
>
  <input
    checked={false}
    className="PrivateSwitchBase-input css-1m9pwf3"
    data-indeterminate={false}
    disabled={true}
    onChange={[Function]}
    type="checkbox"
  />
  <svg
    aria-hidden={true}
    className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
    color="transparent"
    focusable="false"
    viewBox="0 0 16 16"
  >
    <rect
      fillOpacity={0}
      height="14"
      rx="1"
      stroke="#8F8F8F80"
      width="14"
      x="1"
      y="1"
    />
  </svg>
</span>
`;

exports[`is small 1`] = `
<span
  className="MuiCheckbox-root MuiCheckbox-colorPrimary MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary PrivateSwitchBase-root testClass css-12wnr2w-MuiButtonBase-root-MuiCheckbox-root"
  inputRed="ref"
  onBlur={[Function]}
  onContextMenu={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={null}
>
  <input
    checked={false}
    className="PrivateSwitchBase-input css-1m9pwf3"
    data-indeterminate={false}
    disabled={false}
    id="rubiwin"
    name="rubiname"
    onChange={[Function]}
    type="checkbox"
    value="testValue"
  />
  <svg
    aria-hidden={true}
    className="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-ptiqhd-MuiSvgIcon-root"
    color="transparent"
    focusable="false"
    viewBox="0 0 16 16"
  >
    <rect
      fillOpacity={0}
      height="14"
      rx="1"
      stroke="#8F8F8F80"
      width="14"
      x="1"
      y="1"
    />
  </svg>
  <span
    className="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
  />
</span>
`;

exports[`renders correctly props object 1`] = `
<span
  className="MuiCheckbox-root MuiCheckbox-colorPrimary MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary PrivateSwitchBase-root testClass css-12wnr2w-MuiButtonBase-root-MuiCheckbox-root"
  inputRed="ref"
  onBlur={[Function]}
  onContextMenu={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={null}
>
  <input
    checked={false}
    className="PrivateSwitchBase-input css-1m9pwf3"
    data-indeterminate={false}
    disabled={false}
    id="rubiwin"
    name="rubiname"
    onChange={[Function]}
    type="checkbox"
    value="testValue"
  />
  <svg
    aria-hidden={true}
    className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
    color="transparent"
    focusable="false"
    viewBox="0 0 16 16"
  >
    <rect
      fillOpacity={0}
      height="14"
      rx="1"
      stroke="#8F8F8F80"
      width="14"
      x="1"
      y="1"
    />
  </svg>
</span>
`;
